@@ -6,6 +6,9 @@ Revelation changelog
 
 	* miscellaneous code cleanups
 
+	* updated the fpm datahandler to use new Entry class,
+	and rewrote conversions routines
+
 2004-06-22  Erik Grinaker <erikg@codepoet.no>
 
 	* rewrote internal data handling routines to use an Entry
